--- a/website/static/css/klaro.css
+++ b/website/static/css/klaro.css
@@ -16,7 +16,7 @@
     margin-bottom: 2px;
   }
   #klaro .cookie-notice button.cn-decline {
-    background: #d46c04;
+    background: #128dff;
   }
   
   #klaro .cookie-modal {
